# CPP-Tasks

./: main.cpp
task 1/: cache.cpp  cache.h  main  main.cpp
task 1 (LFU cache)/: CMakeLists.txt  main  main.cpp
task 1 (LFU cache)/best_cache/: CMakeLists.txt  best_cache  best_cache.cpp  main_best_cache.cpp
task 1 (LFU cache)/ideal_cache/: CMakeLists.txt
task 1 (LFU cache)/ideal_cache/include/: ideal_cache.hpp
task 1 (LFU cache)/ideal_cache/src/: ideal_cache.cpp  main_ideal_cache.cpp
task 1 (LFU cache)/include/: cache.hpp
task 1 (LFU cache)/source/: cache.cpp
task 1 (LFU cache)/src/: main.cpp
task 1 (LFU cache)/tests/: 1.txt  2.txt  3.txt  CMakeLists.txt  testing.cpp
task 1 (LFU cache)/tests/src/: testing.cpp
